# Meld_PET

./: .gitignore  Meld_PET.md  PET_BIDS_SUB.csv.example  README.md  meld.md  meldpet.docx  meldpet.md  petprep.md
pipeline/: README.md  USER_GUIDE.md  pet_register_in_container.sh  pet_stats.py  pet_visualize.py  pyproject.toml
pipeline/config/: config.example.yaml
pipeline/meldpet/: __init__.py  cli.py  validate.py
pipeline/profiles/interactive/: config.yaml
pipeline/profiles/local/: config.yaml
pipeline/profiles/slurm/: config.yaml
pipeline/scripts/: md_to_docx.py  run_interactive.sh  submit_rerun_meld_t1only.sh  submit_rerun_register.sh
pipeline/workflow/: Snakefile
pipeline/workflow/envs/: meldpet.yaml
pipeline/workflow/rules/: aggregate.smk  common.smk  meld.smk  petprep.smk  prepare.smk  register.smk  visualize.smk
pipeline/workflow/scripts/: aggregate_stats.py  build_samples.py  stage_pet_bids.py  stage_pet_ref.py
